[package]
name = "sr3rs"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.37", features = ["full"] }
tokio-util = "0.7"
lapin = { version = "2.3", features = ["native-tls"] }
tokio-executor-trait = "2.1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
lazy_static = "1.4"
humantime = "2.1"
glob = "0.3"
rand = "0.8"

[dev-dependencies]
tempfile = "3.10"
