[package]
name = "sr3rs"
version = "0.1.0"
edition = "2021"
default-run = "sr3rs"

[dependencies]
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.37", features = ["full"] }
tokio-util = "0.7"
lapin = { version = "2.3", features = ["native-tls"] }
tokio-executor-trait = "2.1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
log = "0.4"
env_logger = "0.11"
fern = "0.6"
lazy_static = "1.4"
humantime = "2.1"
glob = "0.3"
rand = "0.8"
directories = "5.0"
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }
percent-encoding = "2.3.2"
md5 = "0.8.0"
sha2 = "0.11.0"
notify = "6.1.1"
sysinfo = "0.30"
hostname = "0.4"
base64 = "0.22.1"
hex = "0.4.3"
flate2 = "1.1.9"
quick-xml = "0.39.2"
ssh2 = "0.9.5"
suppaftp = { version = "8.0.2", features = ["async-secure", "deprecated", "native-tls", "tokio", "tokio-async-native-tls"] }

[dev-dependencies]
tempfile = "3.10"
