[package]
name = "sr3rs"
version = "0.1.0"
edition = "2021"
default-run = "sr3rs"

license-file = "LICENSE.txt"
authors = [ "Peter Silva", "See AUTHORS.txt" ]


[dependencies]
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
percent-encoding = "2.3.2"
md5 = "0.8.0"
sha2 = "0.11.0"
base64 = "0.22.1"
hex = "0.4.3"
eframe = "0.27"
egui = "0.27"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
pollster = "0.3"
getrandom = { version = "0.2", features = ["js"] }
flate2 = "1.1.9"
rand = "0.8"
lazy_static = "1.4"
urlencoding = "2.1.3"
clap = "4.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-util = "0.7"
tokio-executor-trait = "2.1"
get_if_addrs = "0.5.3"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
env_logger = "0.11"
fern = "0.6"
lazy_static = "1.4"
humantime = "2.1"
glob = "0.3"
rand = "0.8"
directories = "5.0"
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }
notify = "6.1.1"
sysinfo = "0.30"
hostname = "0.4"
flate2 = "1.1.9"
quick-xml = "0.39.2"
urlencoding = "2.1.3"
dirs = "6.0.0"
lapin = { version = "2.3", features = ["native-tls"] }
suppaftp = { version = "8.0.2", features = ["async-secure", "deprecated", "native-tls", "tokio", "tokio-async-native-tls"] }
ssh2 = "0.9.5"
ssh2-config-rs = "0.7.2"
tokio = { version = "1.37", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[dev-dependencies]
tempfile = "3.10"
